delete no longer visible without editing.  adjusted the media query a bit, show differently on my laptop and on device.

--- a/public/apistyle.css
+++ b/public/apistyle.css
@@ -60,7 +60,8 @@ ul li.edit .noEdit {
 }
 
 #deleteButton {
-	background-color: red;
+  border: none;
+  background: none;
 }
 
 
